--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-template",
+  "name": "autocrop-js",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/autocrop.js",
   "type": "module",
   "scripts": {
+    "build": "npx babel src/index.js --out-file dist/autocrop.js",
     "lint": "npx eslint ./src/**/*.js",
     "test": "npx jest"
   },
@@ -29,6 +30,7 @@
     "jest": "latest"
   },
   "dependencies": {
+    "@babel/cli": "^7.19.3",
     "image-js": "^0.35.2",
     "lodash": "^4.17.21",
     "pica": "^9.0.1"
