--- a/babel.config.json
+++ b/babel.config.json
@@ -4,8 +4,9 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": "current"
-        }
+          "browsers": "last 2 versions"
+        },
+        "modules": false
       }
     ]
   ]
