--- a/babel.config.json
+++ b/babel.config.json
@@ -4,9 +4,8 @@
       "@babel/preset-env",
       {
         "targets": {
-          "browsers": "last 2 versions"
-        },
-        "modules": false
+          "node": "current"
+        }
       }
     ]
   ]
