--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
   },
   "extends": "eslint:recommended",
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": 9
   }
 }
